[gd_scene load_steps=3 format=3 uid="uid://level2_opening_animation01"]

[ext_resource type="Script" path="res://scripts/ui/level_2_opening_animation.gd" id="1_script"]
[ext_resource type="FontFile" path="res://assets/fonts/AaSiHaSiHaShouXieTi-2.ttf" id="2_font"]

[node name="Level2OpeningAnimation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_script")

[node name="TextLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -400.0
offset_top = 50.0
offset_right = 400.0
offset_bottom = 150.0
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 80
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
horizontal_alignment = 1
vertical_alignment = 1
text = ""
visible = false

[node name="ImageContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CurrentImage" type="TextureRect" parent="ImageContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
expand_mode = 1
stretch_mode = 5

[node name="LeftArrow" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = 120.0
offset_bottom = -20.0
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 60
text = "<"

[node name="RightArrow" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -100.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 60
text = ">"

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 60
text = "开始游戏"
visible = false
